fix: stretch design-projects list items bg

--- a/src/assets/css/_main-design-project.css
+++ b/src/assets/css/_main-design-project.css
@@ -1,6 +1,6 @@
 .design-project {
     text-align: center;
-    margin: 9.9% 4.5rem 0;
+    margin: 4rem 4.5rem 0;
 }
 .design-project__header {
     background: url("../images/design-project.svg") no-repeat center bottom;
@@ -20,6 +20,7 @@
     list-style-type: none;
 }
 .design-project__list>li {
+    background-size: contain;
     flex: 1;
     padding: 14.5rem 1.25rem 0;
     margin: 0 0.75rem;
